@@ -7,6 +7,9 @@ update-manager (1:0.126.5) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeView.py
     - add waitChild implementation from python-apt to ensure
       its working for buggy hardy python-apt
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - mark mysql-{client,server}-5.0 manual installed in the 
+      cluster check (LP: #453513)
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Oct 2009 16:20:46 +0200
 
